Ingestion Job, Upload history changes